--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,17 @@
-name: "Deployment Status"
+name: "Create Deployment Status"
 description: "Creates a GitHub Deployment status update"
-author: "chrnorm"
+author: "altinukshini"
 branding:
   icon: arrow-up
   color: gray-dark
 inputs:
+  pr:
+    description: "Whether deployment is being created from a PR"
+    default: "false"
+    required: false
+  pr_id:
+    description: "If pr is set to true, pass the PR ID here"
+    required: false
   state:
     description: "State for the deployment"
     required: true
